Fixed miss-aligned btn+btn.dropdown-toggle

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -46,6 +46,7 @@
 .btn-group > .dropdown-menu,
 .btn-group > .popover {
   font-size: @baseFontSize; // redeclare as part 2 of font-size inline-block hack
+  margin-bottom: 2px;
 }
 
 // Reset fonts for other sizes
